# agripolis2020

./: .gitignore  AUTHORS.md  CMakeLists.txt  LICENSE  README.md  serecv.py
Inputfiles_Altmark0423-BB23/: demographics.txt  farmsdata.txt  globals.txt  investments.txt  market.txt  market_2016.txt  options.txt  policy_settings.txt  policy_settings_alt.txt  scenario.txt
doc/: AgriPoliS2020-1.htm  AgriPoliS2020-10.mht  AgriPoliS2020-11.mht  AgriPoliS2020-12.mht  AgriPoliS2020-2.htm  AgriPoliS2020-5.htm  AgriPoliS2020-6.mht  AgriPoliS2020-7.mht  AgriPoliS2020-8.mht  AgriPoliS2020-9.mht  Matrix_syntax.txt  Policy_syntax.txt
inputfiles/: debug_mip.txt  demographics.txt  farmsdata.txt  globals.txt  investments.txt  market.txt  options.txt  policy_settings.txt  scenario-temp.txt  scenario.txt
inputfiles_EMSup1/: farmsdata.txt  globals.txt  investments.txt  market.txt  options.txt  policy_settings.txt  scenario.txt
pb/: pydata.pb.cc  (+3 more)
src/: AgriPoliS.cpp  AgriPoliS.h  CMakeLists.txt  Evaluator.cpp  Evaluator.h  MipBuild.H  OutputControl.cpp  OutputControl.h  RegData.cpp  RegData.h  RegEnvInfo.cpp  RegEnvInfo.h  RegFarm.cpp  RegFarm.h  RegGlobals.cpp  RegGlobals.h  RegInvest.cpp  RegInvest.h  RegLabour.cpp  RegLabour.h  RegLink.cpp  RegLink.h  RegLpD.cpp  RegLpD.h  RegManager.cpp  RegManager.h  RegMarket.cpp  RegMarket.h  RegMessages.cpp  RegMessages.h  RegPlot.cpp  RegPlot.h  RegPlotInformation.cpp  RegPlotInformation.h  RegProduct.cpp  RegProduct.h  RegRL.cpp  RegRL.h  RegRegr.cpp  RegRegr.h  (+18 more)
src/agpCC/: RL.dat-32  agpCC.sln  agpCC.vcxproj  agpCC.vcxproj.filters
(+86 files in other folders)
